# playdate-template-c

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  TODO.md  run.sh
.claude/: settings.local.json
Source/: pdxinfo
Source/fonts/: main.fnt
assets/art/crank_loading/: sample_loading_crank.lua
assets/art/pixel_loading/: sample_playdate_pixel_loading.lua
src/: audio.c  audio.h  dialogue.h  globals.c  globals.h  i18n.c  i18n.h  input.c  input.h  main.c  save.c  save.h  scene.c  scene.h  scenes.h  sysmenu.c  sysmenu.h  tween.c  tween.h
src/scenes/: scene_credits.c  scene_demo_accel.c  scene_demo_crank.c  scene_demo_crankload.c  scene_demo_sprite.c  scene_demos.c  scene_dialogue.c  scene_game.c  scene_loading.c  scene_pause.c  scene_settings.c  scene_splash.c  scene_stage_crank.c  scene_stage_move.c  scene_stage_select.c  scene_stage_tilemap.c  scene_stage_tilt.c  scene_title.c
tools/: gen_bgm.py  gen_crankload.py  gen_jp_font.py  gen_launcher.py  gen_loading.py  gen_sfx.py  gen_sprites.py  gen_title_placeholder.py
